err/sockjschat.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sockjs'...
Listing './lib/python3.5/site-packages/sockjs/tornado'...
Listing './lib/python3.5/site-packages/sockjs/tornado/transports'...
Listing './lib/python3.5/site-packages/sockjsChat'...
Listing './lib/python3.5/site-packages/sockjsChat/apps'...
Listing './lib/python3.5/site-packages/sockjsChat/apps/main'...
Compiling './lib/python3.5/site-packages/sockjsChat/apps/main/views.py'...
***   File "./lib/python3.5/site-packages/sockjsChat/apps/main/views.py", line 6
    print '\n\ninvoked apps.main.views.py\n'
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sockjsChat/multiplex.py'...
***   File "./lib/python3.5/site-packages/sockjsChat/multiplex.py", line 4
    print '\n\ninvoked multiplex.py\n'
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sockjsChat/server.py'...
***   File "./lib/python3.5/site-packages/sockjsChat/server.py", line 11
    print '\n\ninvoking server.py'
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sockjsChat/static'...
Listing './lib/python3.5/site-packages/sockjsChat/static/css'...
Listing './lib/python3.5/site-packages/sockjsChat/static/js'...
Listing './lib/python3.5/site-packages/sockjsChat/templates'...
Compiling './lib/python3.5/site-packages/sockjsChat/urls.py'...
***   File "./lib/python3.5/site-packages/sockjsChat/urls.py", line 11
    print "router : ", router
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/sockjsChat/utils.py'...
***   File "./lib/python3.5/site-packages/sockjsChat/utils.py", line 9
    print urls
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/sockjsChat-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/sockjs_tornado-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/tornado'...
Listing './lib/python3.5/site-packages/tornado/platform'...
Listing './lib/python3.5/site-packages/tornado/test'...
Listing './lib/python3.5/site-packages/tornado/test/csv_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR'...
Listing './lib/python3.5/site-packages/tornado/test/gettext_translations/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/tornado/test/static'...
Listing './lib/python3.5/site-packages/tornado/test/static/dir'...
Listing './lib/python3.5/site-packages/tornado/test/templates'...
Listing './lib/python3.5/site-packages/tornado-4.5.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
